Add path mappings to tsconfig for improved module resolution

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,8 +22,14 @@
     "lib": [
       "ES2022",
       "dom"
-    ]
+    ],
+    "paths": {
+      "@src/*":["src/app/*"],
+      "@assests/*":["src/assets/*"],
+      "@env/*":["src/environments/*"],
+    },
   },
+  
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
     "strictInjectionParameters": true,
